--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ayesha Hair Salon - Beleza e Elegância</title>
+    <title>Studio - Rosangela Rocha</title>
     <meta name="description" content="Salão de beleza especializado em noivas, madrinhas e debutantes. Cortes, escovas, químicas, mechas, unhas, sobrancelhas, maquiagem e penteados." />
     <meta name="author" content="Ayesha Hair Salon" />
 
