--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio - Rosangela Rocha</title>
     <meta name="description" content="Salão de beleza especializado em noivas, madrinhas e debutantes. Cortes, escovas, químicas, mechas, unhas, sobrancelhas, maquiagem e penteados." />
-    <meta name="author" content="Ayesha Hair Salon" />
+    <meta name="author" content="Estudio Rosangela Rocha - Beleza e Elegância" />
 
-    <meta property="og:title" content="Ayesha Hair Salon - Beleza e Elegância" />
+    <meta property="og:title" content="Estudio Rosangela Rocha - Beleza e Elegância" />
     <meta property="og:description" content="Salão de beleza especializado em noivas, madrinhas e debutantes. Cortes, escovas, químicas, mechas, unhas, sobrancelhas, maquiagem e penteados." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
